<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>jsk</groupId>
    <artifactId>jsk-root</artifactId>
    <packaging>pom</packaging>
    <version>jsk.3.1.28</version>

    <modules>
        <module>jx-modules</module>
        <module>di-modules</module>
        <module>db-modules</module>
        <module>web-api-modules</module>
        <module>text-modules</module>
        <module>z-module-4-experiments-only</module>
        <module>aws-modules</module>
        <module>outer-api-modules</module>
        <module>mvn-plugins</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <repository>
            <id>jsk-repo</id>
            <name>S3 jsk repo</name>
            <url>https://jsk-maven-repository.s3.eu-north-1.amazonaws.com/release</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>jsk-repo</id>
            <name>S3 jsk repo</name>
            <url>https://jsk-maven-repository.s3.eu-north-1.amazonaws.com/release</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <snapshotRepository>
            <id>s3-jsk</id>
            <url>s3://jsk-maven-repository/snapshot</url>
        </snapshotRepository>
        <repository>
            <id>s3-jsk</id>
            <url>s3://jsk-maven-repository/release</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.14</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>2.8.6</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <extensions>
            <extension>
                <groupId>jsk</groupId>
                <artifactId>aws-maven</artifactId>
                <version>6.0.0</version>
            </extension>
        </extensions>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.2.4</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <!--                                <transformers>-->
                                <!--                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
                                <!--                                        <mainClass>your.main.Class</mainClass>-->
                                <!--                                    </transformer>-->
                                <!--                                </transformers>-->
                                <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
                                <shadedArtifactAttached>true</shadedArtifactAttached>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>1.20</version>
                <configuration>
                    <licenseName>apache_v2</licenseName>

                    <projectName>Swiss Knife Lib</projectName>
                    <organizationName>Core General</organizationName>
                    <inceptionYear>2019</inceptionYear>

                    <canUpdateCopyright>false</canUpdateCopyright>
                    <canUpdateDescription>false</canUpdateDescription>
                    <canUpdateLicense>false</canUpdateLicense>

                    <verbose>false</verbose>
                </configuration>
                <executions>
                    <execution>
                        <id>X</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <licenseName>apache_v2</licenseName>
                            <projectName>Swiss Knife</projectName>
                            <roots>
                                <root>src</root>
                                <root>target/generated-sources</root>
                                <root>target/processed-source</root>
                            </roots>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>